--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "eslint": "^4.19.1",
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
-    "react-scripts": "1.1.1"
+    "react-scripts": "1.1.1",
+    "prop-types": "latest"
   },
   "scripts": {
     "start": "react-scripts start",
